gcc/testsuite/gdc.test/compilable/test22224.d
// REQUIRED_ARGS: -profile -c

import core.stdc.stdarg;
void error(...) { }
